# tramitatron

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  render.yaml  vercel.json
.github/workflows/: ci.yml
apps/admin/: index.html
apps/kiosk/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/landing/: index.html
connectors/catalog/: aeat-cita-previa.yaml  castello-padron-certificado.yaml  demo-hacienda-appointment.yaml  demo-inss-appointment.yaml  demo-mock-appointment.yaml  demo-worker-appointment.yaml  dgt-cita-previa.yaml  extranjeria-cita-previa.yaml  gva-health-primary-care.yaml  gva-health-sip-renewal.yaml  inss-cita-previa.yaml  jcyl-itv.yaml  mir-dni-renewal-appointment.yaml  (+8 more)
docs/: TRAMITATRON_MASTER_PRD.md
infra/: totems.yaml
knowledge/: sources.yaml
services/api/: Dockerfile  pyproject.toml
services/api/app/: adminauth.py  config.py  main.py  ratelimit.py
services/api/app/catalog/: loader.py  models.py  router.py
services/api/app/connectors/: base.py  mock.py  router.py  worker.py
services/api/app/documents/: models.py  router.py  validators.py
services/api/app/gateway/: anthropic_gateway.py  base.py  mock.py  router.py
services/api/app/incidents/: __init__.py  models.py  redact.py  registry.py  router.py
services/api/app/knowledge/: ingest.py  models.py  router.py  store.py
services/api/app/letters/: analysis.py  models.py  router.py  wording.py
services/api/app/metrics/: __init__.py  models.py  registry.py  router.py
services/api/app/sessions/: memory.py  redis_store.py  router.py  store.py
services/api/app/totems/: __init__.py  loader.py  models.py  registry.py  router.py
services/api/app/voice/: models.py  router.py
services/api/tests/: conftest.py  test_catalog.py  test_connectors.py  test_documents.py  test_gateway.py  test_gateway_anthropic.py  test_health.py  test_incidents.py  test_knowledge.py  test_letters.py  test_metrics.py  test_privacy.py  test_ratelimit.py  test_sessions.py  test_totems.py  test_validators.py  test_voice.py  test_worker_connector.py
services/api/tests/fixtures/knowledge/: sources.yaml
services/api/tests/fixtures/knowledge/snapshots/: index.json  test-itv.txt  test-salud.txt
services/browser-worker/: Dockerfile  pyproject.toml
services/browser-worker/app/: config.py  main.py  models.py  portal.py  registry.py  worker.py
services/browser-worker/app/drivers/: base.py  playwright_driver.py  simulated.py
services/browser-worker/tests/: test_browser_worker.py
services/device-agent/: Dockerfile  pyproject.toml
services/device-agent/app/: main.py
services/device-agent/tests/: test_device_agent.py
(+64 files in other folders)
