[project]
name = "tramitatron-browser-worker"
version = "0.1.0"
description = "Worker de navegación asistida (Playwright): prepara y cede al usuario, nunca automatiza CAPTCHA ni firma"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
# Driver de navegador real (opcional). Sin este extra, el worker usa el driver
# simulado sobre httpx contra el portal de pruebas local: reproducible y sin
# descargar navegadores. Con él: `playwright install chromium`.
playwright = [
    "playwright>=1.49",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
